fix spacing and margins

--- a/src/index.css
+++ b/src/index.css
@@ -191,9 +191,13 @@ body {
       linear-gradient(var(--clr-primary), var(--clr-primary));
   }
 
+  .container {
+    padding-inline: clamp(1rem, calc(5.6vw - 2rem), 2.75rem);
+  }
+
   .category-list {
     --f-align: center;
-    --f-gap: 0.5rem;
+    --f-gap: 0.75rem;
     --f-justify: start;
     margin-inline-start: auto;
     border-top: none;
@@ -207,11 +211,11 @@ body {
   }
 
   .job-list {
-    margin-top: 125px;
+    margin-top: 110px;
   }
 
   .job-categories + .job-list {
-    margin-top: 40px;
+    margin-top: 23px;
   }
 
   .job_logo {
